--- a/NeoVKReposter/pom.xml
+++ b/NeoVKReposter/pom.xml
@@ -65,6 +65,11 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.json/json -->
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+	    </dependency>
 	</dependencies>
 
 	<build>
